[package]
authors = ["Vitaly Domnikov <oss@vitaly.codes>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "Peripheral access API for STM32G4 series microcontrollers"
documentation = "https://docs.rs/stm32g4xx-hal"
edition = "2018"
keywords = ["arm", "cortex-m", "stm32g4xx", "hal"]
license = "MIT/Apache-2.0"
name = "stm32g4xx-hal"
readme = "README.md"
repository = "https://github.com/stm32-rs/stm32g4xx-hal"
version = "0.0.0"

[dependencies]
cortex-m = "0.7.1"
nb = "0.1.1"
stm32g4 = "0.13.0"
paste = "1.0"

[dependencies.bare-metal]
features = ["const-fn"]
version = "0.2.5"

[dependencies.embedded-hal]
features = ["unproven"]
version = "0.2.4"

[dependencies.embedded-dma]
version = "0.1.2"

[dependencies.void]
default-features = false
version = "1.0.2"

[dependencies.stable_deref_trait]
default-features = false
version = "1.1"

[dev-dependencies]
cortex-m-rt = "0.6.10"
cortex-m-rtfm = "0.5.1"
cortex-m-semihosting = "0.3.5"
panic-semihosting = "0.5.3"
panic-halt = "0.2.0"
log = "0.4.11"
cfg-if = "0.1.10"
rtt-target = { version = "0.3.0", features = ["cortex-m"] }
panic-rtt-target = { version = "0.1.1", features = ["cortex-m"] }

[features]
default = ["rt"]
rt = ["stm32g4/rt"]
stm32g431 = ["stm32g4/stm32g431"]
stm32g441 = ["stm32g4/stm32g441"]
stm32g471 = ["stm32g4/stm32g471"]
stm32g473 = ["stm32g4/stm32g473"]
stm32g474 = ["stm32g4/stm32g474"]
stm32g483 = ["stm32g4/stm32g483"]
stm32g484 = ["stm32g4/stm32g484"]
stm32g491 = ["stm32g4/stm32g491"]
stm32g4a1 = ["stm32g4/stm32g4a1"]
log-itm = []
log-rtt = []
log-semihost = [] 

[profile.dev]
codegen-units = 1
debug = true
incremental = false
lto = false

[profile.release]
debug = false
codegen-units = 1
incremental = false
lto = true
