[package]
authors = ["Vitaly Domnikov <oss@vitaly.codes>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "Peripheral access API for STM32G4 series microcontrollers"
documentation = "https://docs.rs/stm32g4xx-hal"
edition = "2018"
keywords = ["arm", "cortex-m", "stm32g4xx", "hal"]
license = "MIT/Apache-2.0"
name = "stm32g4xx-hal"
readme = "README.md"
repository = "https://github.com/stm32-rs/stm32g4xx-hal"
version = "0.0.2"

[dependencies]
nb = "0.1.1"
stm32g4 = "0.15.1"
paste = "1.0"
bitflags = "1.2"
vcell = "0.1"
static_assertions = "1.1"
fugit = "0.3.5"

[dependencies.cortex-m]
version = "0.7.7"
features = ["critical-section-single-core"]

[dependencies.fdcan]
version = "0.2.0"
features = ["fdcan_g0_g4_l5"]

[dependencies.cast]
version = "0.2.7"
default-features = false

[dependencies.bare-metal]
features = ["const-fn"]
version = "0.2.5"

[dependencies.embedded-hal]
features = ["unproven"]
version = "0.2.4"

[dependencies.embedded-dma]
version = "0.1.2"

[dependencies.void]
default-features = false
version = "1.0.2"

[dependencies.stable_deref_trait]
default-features = false
version = "1.1"

[dependencies.defmt]
version = "0.3.2"
optional = true

[dev-dependencies]
cortex-m-rt = "0.7.2"
defmt-rtt = "0.4.0"
cortex-m-rtic = "1.1.4"
cortex-m-semihosting = "0.3.5"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
panic-semihosting = "0.5.3"
panic-halt = "0.2.0"
panic-itm = "0.4.2"
lazy_static = { version = "1.4", features = ["spin_no_std"] }
log = "0.4.11"
cortex-m-log = { version = "0.7", features = ["log-integration"] }
cfg-if = "0.1.10"
mpu6050 = "0.1.4"
bme680 = "0.6.0"
embedded-sdmmc = "0.3.0"

#TODO: Separate feature sets
[features]
default = ["rt"]
rt = ["stm32g4/rt"]
stm32g431 = ["stm32g4/stm32g431"]
stm32g441 = ["stm32g4/stm32g441"]
stm32g471 = ["stm32g4/stm32g471"]
stm32g473 = ["stm32g4/stm32g473"]
stm32g474 = ["stm32g4/stm32g474"]
stm32g483 = ["stm32g4/stm32g483"]
stm32g484 = ["stm32g4/stm32g484"]
stm32g491 = ["stm32g4/stm32g491"]
stm32g4a1 = ["stm32g4/stm32g4a1"]
log-itm = ["cortex-m-log/itm"]
log-rtt = []
log-semihost = ["cortex-m-log/semihosting"]
defmt-logging = ["defmt"]

[profile.dev]
codegen-units = 1
debug = true
incremental = false
lto = false

[profile.release]
debug = false
codegen-units = 1
incremental = false
lto = true

[[example]]
name = "flash_with_rtic"
required-features = ["stm32g474"]
