[package]
authors = ["Vitaly Domnikov <oss@vitaly.codes>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "Peripheral access API for STM32G4 series microcontrollers"
documentation = "https://docs.rs/stm32g4xx-hal"
edition = "2021"
keywords = ["arm", "cortex-m", "stm32g4xx", "hal"]
license = "MIT/Apache-2.0"
name = "stm32g4xx-hal"
readme = "README.md"
repository = "https://github.com/stm32-rs/stm32g4xx-hal"
version = "0.0.2"

[dependencies]
nb = "1"
stm32g4 = { version = "0.16.0", features = ["atomics"] }
paste = "1.0"
fugit = "0.3.7"
stm32-usbd = { version = "0.7.0", optional = true }
fixed = { version = "1.28.0", optional = true }
embedded-io = "0.6"
stm32-hrtim = { version = "0.1.0", optional = true }

[dependencies.cortex-m]
version = "0.7.7"
features = ["critical-section-single-core"]

[dependencies.fdcan]
version = "0.2.1"
features = ["fdcan_g0_g4_l5"]
optional = true

[dependencies.cast]
version = "0.2.7"
default-features = false

[dependencies.embedded-hal-old]
package = "embedded-hal"
features = ["unproven"]
version = "0.2.7"

[dependencies.embedded-hal]
version = "1.0.0"

[dependencies.embedded-dma]
version = "0.1.2"

[dependencies.void]
default-features = false
version = "1.0.2"

[dependencies.defmt]
version = "1"
optional = true

[dev-dependencies]
cortex-m-rt = "0.7.2"
defmt-rtt = "0.4.0"
embedded-test = "0.6.2"
cortex-m-rtic = "1.1.4"
cortex-m-semihosting = "0.3.5"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
panic-semihosting = "0.5.3"
panic-halt = "0.2.0"
panic-itm = "0.4.2"
lazy_static = { version = "1.4", features = ["spin_no_std"] }
log = "0.4.11"
cortex-m-log = { version = "0.7", features = ["log-integration"] }
cfg-if = "0.1.10"
mpu6050 = "0.1.4"
bme680 = "0.6.0"
embedded-sdmmc = "0.3.0"
usb-device = { version = "0.3.2", features = ["defmt"] }
usbd-serial = "0.2.2"

#TODO: Separate feature sets
[features]
default = ["rt"]

rt = ["stm32g4/rt"]
usb = ["dep:stm32-usbd"]
stm32g431 = ["stm32g4/stm32g431", "cat2"]
stm32g441 = ["stm32g4/stm32g441", "cat2"]
stm32g473 = ["stm32g4/stm32g473", "cat3", "adc3", "adc4", "adc5"]
stm32g474 = ["stm32g4/stm32g474", "cat3", "adc3", "adc4", "adc5", "stm32-hrtim/stm32g474"]
stm32g483 = ["stm32g4/stm32g483", "cat3", "adc3", "adc4", "adc5"]
stm32g484 = ["stm32g4/stm32g484", "cat3", "adc3", "adc4", "adc5", "stm32-hrtim/stm32g484"]
stm32g491 = ["stm32g4/stm32g491", "cat4", "adc3"]
stm32g4a1 = ["stm32g4/stm32g4a1", "cat4", "adc3"]


gpio-g43x = []

gpio-g47x = []

gpio-g49x = []

log-itm = ["cortex-m-log/itm"]
log-rtt = []
log-semihost = ["cortex-m-log/semihosting"]
defmt = [
    "dep:defmt",
    "stm32g4/defmt",
    "fugit/defmt",
    "nb/defmt-0-3",
    "embedded-hal/defmt-03",
    "embedded-io/defmt-03",
    "embedded-test/defmt",
    "stm32-hrtim?/defmt"
]
cordic = ["dep:fixed"]
adc3 = []
adc4 = []
adc5 = []

# Device category
cat2 = ["gpio-g43x"]
cat3 = ["gpio-g47x"]
cat4 = ["gpio-g49x"]

can = ["dep:fdcan"]
hrtim = ["dep:stm32-hrtim"] # Only available for stm32g474 and stm32g484

[profile.dev]
codegen-units = 1
debug = true
incremental = false
lto = false

[profile.release]
debug = false
codegen-units = 1
incremental = false
lto = true

[profile.test]
opt-level = "s"
debug = true
codegen-units = 1
incremental = false
lto = true

[[test]]
name = "nucleo-g474"
harness = false
required-features = ["stm32g474", "defmt", "cordic"]

[[test]]
name = "nucleo-g474_w_jumpers"
harness = false
required-features = ["stm32g474", "defmt"]

[[test]]
name = "nucleo-g474_hrtim"
harness = false
required-features = ["stm32g474", "defmt", "hrtim"]

[lib]
test = false

[[example]]
name = "can-echo"
required-features = ["can"]

[[example]]
name = "flash_with_rtic"
required-features = ["stm32g474"]

[[example]]
name = "usb_serial"
required-features = ["usb"]

[[example]]
name = "cordic"
required-features = ["cordic"]

[[example]]
name = "hrtim-adc-trigger"
required-features = ["hrtim"]
path = "examples/hrtim/adc-trigger.rs"

[[example]]
name = "hrtim-capture"
required-features = ["hrtim"]
path = "examples/hrtim/capture.rs"

[[example]]
name = "hrtim-deadtime"
required-features = ["hrtim"]
path = "examples/hrtim/deadtime.rs"

[[example]]
name = "hrtim-capture-dma"
required-features = ["hrtim"]
path = "examples/hrtim/capture-dma.rs"

[[example]]
name = "hrtim-eev-comp"
required-features = ["hrtim"]
path = "examples/hrtim/eev-comp.rs"

[[example]]
name = "hrtim-eev"
required-features = ["hrtim"]
path = "examples/hrtim/eev.rs"

[[example]]
name = "hrtim-flt-comp"
required-features = ["hrtim"]
path = "examples/hrtim/flt-comp.rs"

[[example]]
name = "hrtim-flt"
required-features = ["hrtim"]
path = "examples/hrtim/flt.rs"

[[example]]
name = "hrtim"
required-features = ["hrtim"]
path = "examples/hrtim/hrtim.rs"

[[example]]
name = "hrtim-master"
required-features = ["hrtim"]
path = "examples/hrtim/master.rs"
